[package]
name = "rrm"
version = "0.0.1-alpha.0"
edition = "2021"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
rust-version = "1.58.1"
description = "Rusty RimWorld (mod) Manager is a cross-platform CLI mod manager written in Rust"
readme = "README.md"
repository = "https://github.com/AOx0/rrm"
homepage = "https://github.com/AOx0/rrm"
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
execute = "0.2.9"
clap = { version= "3.0.13", default-features = false, features=["env", "derive", "unicode", "suggestions", "std"] }
tokio =  { version= "1.16.1", features=["full"] }

rrm_locals = "0.0.1-alpha.0"
rrm_scrap = "0.0.1-alpha.0"
rrm_installer = "0.0.1-alpha.0"