[workspace]
members = [
    "rrm_installer",
    "rrm_locals",
    "rrm_scrap",
    "rrm_xml"
]

[package]
name = "rrm"
version = "0.0.1-alpha.6"
edition = "2021"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
rust-version = "1.58.1"
description = "Rusty RimWorld (mod) Manager is a cross-platform CLI mod manager written in Rust"
readme = "README.md"
repository = "https://github.com/AOx0/rrm"
homepage = "https://github.com/AOx0/rrm"
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
execute = "0.2.11"
async-recursion = "1.0.0"
clap = { version= "3.2.5", default-features = false, features=["env", "derive", "unicode", "suggestions", "std"] }
tokio =  { version= "1.19.2", default-features = false }
async-process = "1.4.0"
futures-lite = "1.12.0"
fs_extra = "1.2.0"
regex = "1.5.6"

rrm_locals = {path="rrm_locals", version="0.0.1-alpha.3"}
rrm_scrap = {path="rrm_scrap", version="0.0.1-alpha.4"}
rrm_installer = { path="rrm_installer", version="0.0.1-alpha.4"}
