[workspace]
members = [
    "rrm_installer",
    "rrm_locals",
    "rrm_scrap",
    "rrm_xml"
]

[package]
name = "rrm"
version = "0.0.1-alpha.10"
edition = "2024"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
description = "Rusty RimWorld (mod) Manager is a cross-platform CLI mod manager written in Rust"
readme = "README.md"
repository = "https://github.com/AOx0/rrm"
homepage = "https://github.com/AOx0/rrm"
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
execute = "0.2.13"
async-recursion = "1.1.1"
clap = { version= "4.5.23", features=["env", "derive", "unicode", "suggestions", "std"] }
clap_complete = "4.5.40"
clap_complete_command = "0.6.1"
tokio =  { version = "1.42.0", default-features = false, features = ["full"] }
fs_extra = "1.3.0"
regex = "1.11.1"

rrm_locals = {path="rrm_locals", version="0.0.1-alpha.9"}
rrm_scrap = {path="rrm_scrap", version="0.0.1-alpha.8"}
rrm_installer = { path="rrm_installer", version="0.0.1-alpha.8"}
colored = "2.2.0"
text_io = "0.1.12"
notify = "8.0.0"
dhat = { version = "0.3.3", optional = true }

[profile.pf]
inherits = "release"
debug = 1

[features]
dhat = ["dep:dhat"]
