[package]
name = "rrm_installer"
version = "0.0.1-alpha.3"
edition = "2021"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
rust-version = "1.58.1"
description = "Part of rrm."
repository = "https://github.com/AOx0/rrm_installer"
homepage = "https://github.com/AOx0/rrm_installer"
categories = ["rrm"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []


[dependencies]
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.75"
include_dir = "0.7.2"
directories = "4.0.1"
dotenv = "0.15.0"
rrm_locals = {path="../rrm_locals", version="0.0.1-alpha.1"}