[package]
name = "rrm_locals"
version = "0.0.1-alpha.9"
edition = "2021"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
description = "Part of rrm"
repository = "https://github.com/AOx0/rrm"
homepage = "https://github.com/AOx0/rrm"
categories = []
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-absolutize = "3.1.1"
serde = {version="1.0.217", features=["derive"]}
flagset = "0.4.6"
fuzzy-matcher = "0.3.7"
rrm_xml = {path="../rrm_xml", version="0.0.1-alpha.7"}
