[package]
name = "rrm_scrap"
version = "0.0.1-alpha.3"
edition = "2021"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
rust-version = "1.58.1"
description = "Part of rrm"
repository = "https://github.com/AOx0/rrm_scrap"
homepage = "https://github.com/AOx0/rrm_scrap"
categories = ["rrm"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11.9", features = ["json"] }
tokio =  { version= "1.15.0", features=["full"] }
lazy-regex = "2.2.2"
fuzzy-matcher = "0.3.7"
html-escape = "0.2.9"
flagset = "0.4.2"
rrm_locals = {path="../rrm_locals", version="0.0.1-alpha.1"}