[package]
name = "rrm_scrap"
version = "0.0.1-alpha.6"
edition = "2021"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
rust-version = "1.58.1"
description = "Part of rrm"
repository = "https://github.com/AOx0/rrm_scrap"
homepage = "https://github.com/AOx0/rrm_scrap"
categories = ["rrm"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
reqwest = { version = "0.11.11", features = ["json"] }
tokio =  { version= "1.19.2", features=["full"] }
lazy-regex = "2.3.0"
fuzzy-matcher = "0.3.7"
html-escape = "0.2.11"
flagset = "0.4.3"
rrm_locals = {path="../rrm_locals", version="0.0.1-alpha.2"}
