[package]
name = "rrm_scrap"
version = "0.0.1-alpha.8"
edition = "2021"
authors = ["AOx0 <aoxo.contact@gmail.com>"]
description = "Part of rrm"
repository = "https://github.com/AOx0/rrm"
homepage = "https://github.com/AOx0/rrm"
categories = []
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.22.0"
reqwest = { version = "0.12.12", features = ["json"] }
tokio =  { version= "1.42.0", features=["full"] }
lazy-regex = "3.4.1"
fuzzy-matcher = "0.3.7"
html-escape = "0.2.13"
flagset = "0.4.6"
rrm_locals = {path="../rrm_locals", version="0.0.1-alpha.9"}
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
regex = "1.11.1"
