[package]
name = "rrm_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []


[dependencies]
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.75"
include_dir = "0.7.2"
directories = "4.0.1"
dotenv = "0.15.0"

rrm_locals = {path="../rrm_locals"}