[package]
name = "rwm_scrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11.9", features = ["json"] }
tokio =  { version= "1.15.0", features=["full"] }
lazy-regex = "2.2.2"
html-escape = "0.2.9"